docs: fix JVM book reference formatting